--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
 </head>
 
@@ -20,11 +20,124 @@
         <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-        <!-- Timeblocks go here -->
+        <!-- start of time-blocks-->
+        <div id="8" class="row time-block past">
+            <div class="col-md-2 hour">
+                <p>8AM</p>
+            </div>
+            <textarea class="col-md-9 description">
+            </textarea>
+            <button class="col-md-1 saveBtn">
+                <i class="fas fa-save"></i>
+            </button>
+        </div>
+
+        <div id="9" class="row time-block past">
+            <div class="col-md-2 hour">
+                <p>9AM</p>
+            </div>
+            <textarea class="col-md-9 description">
+            </textarea>
+            <button class="col-md-1 saveBtn">
+                <i class="fas fa-save"></i>
+            </button>
+        </div>
+
+        <div id="10" class="row time-block past">
+            <div class="col-md-2 hour">
+                <p>10AM</p>
+            </div>
+            <textarea class="col-md-9 description">
+            </textarea>
+            <button class="col-md-1 saveBtn">
+                <i class="fas fa-save"></i>
+            </button>
+        </div>
+
+        <div id="11" class="row time-block past">
+            <div class="col-md-2 hour">
+                <p>11AM</p>
+            </div>
+            <textarea class="col-md-9 description past">
+            </textarea>
+            <button class="col-md-1 saveBtn">
+                <i class="fas fa-save"></i>
+            </button>
+        </div>
+
+        <div id="12" class="row time-block past">
+            <div class="col-md-2 hour">
+                <p>12PM</p>
+            </div>
+            <textarea class="col-md-9 description">
+            </textarea>
+            <button class="col-md-1 saveBtn">
+                <i class="fas fa-save"></i>
+            </button>
+        </div>
+
+        <div id="13" class="row time-block past">
+            <div class="col-md-2 hour">
+                <p>1PM</p>
+            </div>
+            <textarea class="col-md-9 description">
+            </textarea>
+            <button class="col-md-1 saveBtn">
+                <i class="fas fa-save"></i>
+            </button>
+        </div>
+
+        <div id="14" class="row time-block past">
+            <div class="col-md-2 hour">
+                <p>2PM</p>
+            </div>
+            <textarea class="col-md-9 description">
+            </textarea>
+            <button class="col-md-1 saveBtn">
+                <i class="fas fa-save"></i>
+            </button>
+        </div>
+
+        <div id="15" class="row time-block past">
+            <div class="col-md-2 hour">
+                <p>3PM</p>
+            </div>
+            <textarea class="col-md-9 description">
+            </textarea>
+            <button class="col-md-1 saveBtn">
+                <i class="fas fa-save"></i>
+            </button>
+        </div>
+
+        <div id="16" class="row time-block past">
+            <div class="col-md-2 hour">
+                <p>4PM</p>
+            </div>
+            <textarea class="col-md-9 description">
+            </textarea>
+            <button class="col-md-1 saveBtn">
+                <i class="fas fa-save"></i>
+            </button>
+        </div>
+
+        <div id="17" class="row time-block past">
+            <div class="col-md-2 hour">
+                <p>5PM</p>
+            </div>
+            <textarea class="col-md-9 description">
+            </textarea>
+            <button class="col-md-1 saveBtn">
+                <i class="fas fa-save"></i>
+            </button>
+        </div>
+
     </div>
+
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script type="text/javascript" src="./assets/js/script.js"></script>
 </body>
 
 </html>
