--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         <p class="lead">A simple calendar app for scheduling your work day</p>
         <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container">
         <!-- start of time-blocks-->
-        <div id="8" class="row time-block past">
+
+        <!--8am-->
+        <div id="8" class="row time-block">
             <div class="col-md-2 hour">
                 <p>8AM</p>
             </div>
@@ -32,7 +35,8 @@
             </button>
         </div>
 
-        <div id="9" class="row time-block past">
+        <!--9am-->
+        <div id="9" class="row time-block">
             <div class="col-md-2 hour">
                 <p>9AM</p>
             </div>
@@ -43,7 +47,8 @@
             </button>
         </div>
 
-        <div id="10" class="row time-block past">
+        <!--10am-->
+        <div id="10" class="row time-block">
             <div class="col-md-2 hour">
                 <p>10AM</p>
             </div>
@@ -54,18 +59,20 @@
             </button>
         </div>
 
-        <div id="11" class="row time-block past">
+        <!--11am-->
+        <div id="11" class="row time-block">
             <div class="col-md-2 hour">
                 <p>11AM</p>
             </div>
-            <textarea class="col-md-9 description past">
+            <textarea class="col-md-9 description">
             </textarea>
             <button class="col-md-1 saveBtn">
                 <i class="fas fa-save"></i>
             </button>
         </div>
 
-        <div id="12" class="row time-block past">
+        <!--12pm-->
+        <div id="12" class="row time-block">
             <div class="col-md-2 hour">
                 <p>12PM</p>
             </div>
@@ -76,7 +83,8 @@
             </button>
         </div>
 
-        <div id="13" class="row time-block past">
+        <!--1pm-->
+        <div id="13" class="row time-block">
             <div class="col-md-2 hour">
                 <p>1PM</p>
             </div>
@@ -87,7 +95,8 @@
             </button>
         </div>
 
-        <div id="14" class="row time-block past">
+        <!--2pm-->
+        <div id="14" class="row time-block">
             <div class="col-md-2 hour">
                 <p>2PM</p>
             </div>
@@ -98,7 +107,8 @@
             </button>
         </div>
 
-        <div id="15" class="row time-block past">
+        <!--3pm-->
+        <div id="15" class="row time-block">
             <div class="col-md-2 hour">
                 <p>3PM</p>
             </div>
@@ -109,7 +119,8 @@
             </button>
         </div>
 
-        <div id="16" class="row time-block past">
+        <!--4pm-->
+        <div id="16" class="row time-block">
             <div class="col-md-2 hour">
                 <p>4PM</p>
             </div>
@@ -120,7 +131,8 @@
             </button>
         </div>
 
-        <div id="17" class="row time-block past">
+        <!--5pm-->
+        <div id="17" class="row time-block">
             <div class="col-md-2 hour">
                 <p>5PM</p>
             </div>
