fixed script.js by adding hour to id and reformatting script

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- start of time-blocks-->
 
         <!--8am-->
-        <div id="8" class="row time-block">
+        <div id="hour8" class="row time-block">
             <div class="col-md-2 hour">
                 <p>8AM</p>
             </div>
@@ -36,7 +36,7 @@
         </div>
 
         <!--9am-->
-        <div id="9" class="row time-block">
+        <div id="hour9" class="row time-block">
             <div class="col-md-2 hour">
                 <p>9AM</p>
             </div>
@@ -48,7 +48,7 @@
         </div>
 
         <!--10am-->
-        <div id="10" class="row time-block">
+        <div id="hour10" class="row time-block">
             <div class="col-md-2 hour">
                 <p>10AM</p>
             </div>
@@ -60,7 +60,7 @@
         </div>
 
         <!--11am-->
-        <div id="11" class="row time-block">
+        <div id="hour11" class="row time-block">
             <div class="col-md-2 hour">
                 <p>11AM</p>
             </div>
@@ -72,7 +72,7 @@
         </div>
 
         <!--12pm-->
-        <div id="12" class="row time-block">
+        <div id="hour12" class="row time-block">
             <div class="col-md-2 hour">
                 <p>12PM</p>
             </div>
@@ -84,7 +84,7 @@
         </div>
 
         <!--1pm-->
-        <div id="13" class="row time-block">
+        <div id="hour13" class="row time-block">
             <div class="col-md-2 hour">
                 <p>1PM</p>
             </div>
@@ -96,7 +96,7 @@
         </div>
 
         <!--2pm-->
-        <div id="14" class="row time-block">
+        <div id="hour14" class="row time-block">
             <div class="col-md-2 hour">
                 <p>2PM</p>
             </div>
@@ -108,7 +108,7 @@
         </div>
 
         <!--3pm-->
-        <div id="15" class="row time-block">
+        <div id="hour15" class="row time-block">
             <div class="col-md-2 hour">
                 <p>3PM</p>
             </div>
@@ -120,7 +120,7 @@
         </div>
 
         <!--4pm-->
-        <div id="16" class="row time-block">
+        <div id="hour16" class="row time-block">
             <div class="col-md-2 hour">
                 <p>4PM</p>
             </div>
@@ -132,7 +132,7 @@
         </div>
 
         <!--5pm-->
-        <div id="17" class="row time-block">
+        <div id="hour17" class="row time-block">
             <div class="col-md-2 hour">
                 <p>5PM</p>
             </div>
